--- a/Jogo Da Velha/index.html
+++ b/Jogo Da Velha/index.html
@@ -4,35 +4,44 @@
         <meta charset="utf-8">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
         <body>
+      <div class="container">
             <div class="menu">
                 <h1>
                     Menu
                 </h1>
             </div>
+
+
             <div id="jogo">
-                <div class="linha">
-                    <div class="casa" id="casa1"></div>
-                    <div class="casa" id="casa2"></div>
-                    <div class="casa" id="casa3"></div>
+                <div class="row">
+                    <div class="col s4"></div>
+                    <div class="col s4" ></div>
+                    <div class="col s4"></div>
                 </div>
-                <div class="linha">
-                    <div class="casa" id="casa4"></div>
-                    <div class="casa" id="casa5"></div>
-                    <div class="casa" id="casa6"></div>
+                <div class="row">
+                    <div class="col s4"></div>
+                    <div class="col s4"></div>
+                    <div class="col s4" ></div>
                 </div>
-                <div class="linha">
-                    <div class="casa" id="casa7"></div>
-                    <div class="casa" id="casa8"></div>
-                    <div class="casa" id="casa9"></div>
+                <div class="row">
+                    <div class="col s4"></div>
+                    <div class="col s4"></div>
+                    <div class="col s4"></div>
                 </div>
             </div>
-            <button onclick="clearAll()"> teste</button>
+
+            <button id="limpar"> teste</button>
             <div id="resultado"></div>
+      </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="./index.js" async defer></script>
     </body>
 </html>
