Finalizando html e js

--- a/Jogo Da Velha/index.html
+++ b/Jogo Da Velha/index.html
@@ -12,12 +12,10 @@
     <body>
         <body>
       <div class="container">
-            <div class="menu">
-                <h1>
-                    Menu
-                </h1>
-            </div>
-
+        
+        <h1>
+            JOGO DA VELHA
+        </h1>
 
             <div id="jogo">
                 <div class="row">
@@ -37,10 +35,16 @@
                 </div>
             </div>
 
-            <button id="limpar"> teste</button>
-            <div id="resultado"></div>
+            <button id="limpar"> Reiniciar jogo</button>
       </div>
-
+      <div class="placar">
+        <p class="ponto_x" id="ponto_x">
+            0
+        </p>
+        <p class="ponto_o" id="ponto_o">
+            0
+        </p>
+      </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="./index.js" async defer></script>
     </body>
